[package]
name = "qp2p"
description = "Peer-to-peer networking library using QUIC"
documentation = "https://docs.rs/qp2p"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/maidsafe/qp2p"
version = "0.17.1"
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
keywords = [ "quic" ]
edition = "2018"

[dependencies]
bincode = "1.2.1"
futures = "~0.3.8"
quinn-proto = "0.7.3"
rcgen = "~0.8.4"
structopt = "~0.3.15"
thiserror = "1.0.23"
webpki = "~0.21.3"
tiny-keccak = "2.0.2"
tracing = "~0.1.26"
xor_name = "3.1.0"

  [dependencies.backoff]
  version = "0.3.0"
  features = [ "tokio" ]

  [dependencies.bytes]
  version = "1.0.1"
  features = [ "serde" ]

  [dependencies.igd]
  version = "~0.12.0"
  features = [ "aio" ]
  optional = true

  [dependencies.quinn]
  version = "~0.7.0"
  features = [ "tls-rustls" ]
  default-features = false

  [dependencies.rustls]
  version = "~0.19.0"
  features = [ "dangerous_configuration" ]

  [dependencies.serde]
  version = "1.0.117"
  features = [ "derive" ]

  [dependencies.tokio]
  version = "1.2.0"
  features = [
  "rt",
  "sync",
  "time",
  "macros",
  "io-std",
  "io-util",
  "rt-multi-thread"
]

[dev-dependencies]
color-eyre = "0.5.11"
ctor = "0.1.20"
rand = "~0.7.3"
tracing-test = "0.1.0"
tracing-subscriber = "0.2.19"

  [dev-dependencies.tiny-keccak]
  version = "2.0.2"
  features = [ "sha3" ]

[features]
default = [ "igd" ]
no-igd = [ ]
