[package]
name = "qp2p"
description = "Peer-to-peer networking library using QUIC"
documentation = "https://docs.rs/qp2p"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/maidsafe/qp2p"
version = "0.23.0"
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
keywords = [ "quic" ]
edition = "2018"

[[example]]
name = "p2p_node"
required-features = ["unstable-opened-connection-count"]

[features]
default = [ "igd" ]

# `unstable-` features may be removed at any time without a breaking change release
unstable-opened-connection-count = []

[dependencies]
backoff = { version = "0.3.0", features = ["tokio"] }
bincode = "1.2.1"
bytes = { version = "1.0.1", features = ["serde"] }
futures = "~0.3.8"
igd = { version = "0.12.0", optional = true, features = ["aio"] }
quinn = { version = "0.7.0", default-features = false, features = ["tls-rustls"] }
quinn-proto = "0.7.3"
rcgen = "~0.8.4"
rustls = { version = "0.19.0", features = ["dangerous_configuration"] }
serde = { version = "1.0.117", features = ["derive"] }
stability = "0.1.0"
thiserror = "1.0.23"
tiny-keccak = "2.0.2"
tokio = { version = "1.2.0", features = ["sync"] }
tracing = "~0.1.26"
webpki = "~0.21.3"
xor_name = "3.1.0"

[dev-dependencies]
color-eyre = "0.5.11"
ctor = "0.1.20"
rand = "~0.7.3"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
tokio = { version = "1.2.0", features = ["macros"] }
tracing-subscriber = "0.2.19"
tracing-test = "0.1.0"
