[package]
name = "qp2p"
description = "Peer-to-peer networking library using QUIC"
documentation = "https://docs.rs/qp2p"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/maidsafe/qp2p"
version = "0.28.6"
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
keywords = [ "quic" ]
edition = "2021"

[[example]]
name = "p2p_node"

[features]
default = [ "igd" ]

[dependencies]
backoff = { version = "0.3.0", features = ["tokio"] }
bincode = "1.2.1"
bytes = { version = "1.0.1", features = ["serde"] }
futures = "~0.3.8"
igd = { version = "0.12.0", optional = true, features = ["aio"] }
quinn = { version = "0.8.0", default-features = false, features = ["tls-rustls", "ring"] }
quinn-proto = "0.8.0"
rcgen = "~0.8.4"
serde = { version = "1.0.117", features = ["derive"] }
thiserror = "1.0.23"
tokio = { version = "1.12.0", features = ["sync"] }
tracing = "~0.1.26"
webpki = "~0.21.3"
rustls = { version = "0.20.2", default-features = false, features = ["quic", "dangerous_configuration"] }
structopt = {version = "0.3.25", optional = true}

[dev-dependencies]
color-eyre = "0.5.11"
ctor = "0.1.20"
rand = "~0.7.3"
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
tokio = { version = "1.12.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.2.19"
tracing-test = "0.1.0"
quinn = { version = "0.8.0", default-features = false, features = ["tls-rustls", "native-certs"] }
